# mmsolv

./: Cargo.toml  build-wasm.rs  build-wasm.sh  graphical-solve.wasm  index.html
assets/: color_shader.glsl  spritesheet.xcf  vertex_shader.glsl
src/: bruteforce.rs  combinations.rs  lib.rs  logical.rs  short_form.rs
