[package]
name = "mmsolv"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"